--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "todo-react",
+  "name": "todo-react-redux",
+  "homepage": "https://nikgosu.github.io/todo-react-redux/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
